# NASproject_v2

./: .gitattributes  .gitignore  PROJECT_CONTEXT.md  README.md
backend/: pyproject.toml
backend/frogswork_api/: __init__.py  config.py  db.py  main.py  paths.py  schemas.py
backend/frogswork_api/archetypes/: router.py
backend/frogswork_api/auth/: deps.py  router.py  security.py
backend/frogswork_api/folders/: router.py
backend/frogswork_api/helper/: deps.py  router.py
backend/frogswork_api/integrations/: _run.py  acl.py  btrfs.py  linux_users.py  samba.py  samba_shares.py  share_layout.py  system_ops.py  update_ops.py
backend/frogswork_api/public/: router.py
backend/frogswork_api/services/: archetypes.py  device_identity.py  elevations.py  folders.py  helper_mounts.py  permissions.py  retention.py  snapshots.py  system.py  users.py
backend/frogswork_api/setup/: router.py
backend/frogswork_api/snapshots/: router.py
backend/frogswork_api/storage/: router.py
backend/frogswork_api/system/: router.py
backend/frogswork_api/users/: router.py
backend/tests/: conftest.py  test_archetypes.py  test_auth.py  test_device_identity.py  test_elevations.py  test_folders.py  test_helper.py  test_main.py  test_public.py  test_samba_shares.py  test_setup.py  test_snapshots.py  test_storage.py  test_storage_settings.py  test_system.py  test_users.py
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
docs/: api.md  architecture.md  commercial-ship-checklist.md  customer-quick-start.md  dashboard-post-v1-backlog.md  development-behaviour.md  (+12 more)
(+129 files in other folders)
