[project]
name = "frogswork-api"
version = "0.0.0-dev"
description = "FrogsWork File Storage control-plane API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "bcrypt>=4.2.0",
    "pyjwt>=2.9.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["frogswork_api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
